# my-screening-tool

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.json
.claude/agents/: analyst.md  coder.md  research.md  review.md
.claude/rules/: coding-style.md  general.md  workflow.md
.claude/skills/lint/: SKILL.md
.claude/skills/run/: SKILL.md
.github/workflows/: ci.yml
app/: main.py  report_multiple.py  report_single.py  report_specified.py
app/client/: jq.py
app/constants/: __init__.py  fins.py  quotes.py
app/repository/: __init__.py  fins.py  listed_info.py  quotes.py
app/services/: analyze_quotes.py  chart_creator.py  chart_service.py  daily_quotes.py  fins.py  listed_info.py  pdf_report_service.py  plotter.py  quotes.py  report_generator.py
app/tools/listed_info/: utils.py
app/types/: __init__.py  financial_data.py  quotes_data.py
app/usecase/: report_multiple.py  report_single.py
app/utils/: dates.py  files.py  stock_code.py
client/: client.py
config/: config.py
