[project]
name = "jq-screening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "jquants-api-client>=1.8.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "mplfinance>=0.12.0",
]

[project.scripts]
main = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "main.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = ["COM812", "ISC001", "N802", "PD901", "RT504"]

[tool.pylint]
disable = ["invalid-name", "broad-exception-caught"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pandas-stubs>=2.2.3.250527",
    "ruff>=0.12.0",
]
