[project]
name = "jq-screening"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "jquants-api-client>=1.8.0",
    "pandas>=2.3.0",
    "pillow>=11.2.1",
    "python-dateutil>=2.8.0",
    "python-dotenv>=1.0.0",
    "matplotlib>=3.7.0",
    "mplfinance>=0.12.0",
    "pypdf>=6.5.0",
]

[project.scripts]
main = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "main.py"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "jquantsapi.*"
ignore_missing_imports = true

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "C90", "I", "N", "UP", "YTT", "S", "BLE", "FBT", "B", "A", "COM", "C4", "DTZ", "T10", "EM", "EXE", "FA", "ISC", "ICN", "G", "INP", "PIE", "T20", "PYI", "PT", "Q", "RSE", "RET", "SLF", "SLOT", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "TD", "FIX", "ERA", "PD", "PGH", "PL", "TRY", "FLY", "NPY", "AIR", "PERF", "FURB", "LOG", "RUF"]
ignore = [
    "COM812",   # trailing comma (formatter conflict)
    "ISC001",   # implicit string concatenation (formatter conflict)
    "N802",     # function name lowercase
    "PD901",    # generic variable name `df`
    "RET504",   # unnecessary assignment before return
    "RUF001",   # ambiguous unicode (Japanese fullwidth chars in strings)
    "RUF002",   # ambiguous unicode (Japanese fullwidth chars in docstrings)
    "RUF003",   # ambiguous unicode (Japanese fullwidth chars in comments)
    "PLR2004",  # magic value in comparison (financial thresholds)
    "ERA001",   # commented-out code (Japanese comments misdetected)
    "TRY003",   # long exception messages (Japanese messages)
    "EM102",    # f-string in exception (Japanese messages)
    "T201",     # print found (CLI tool)
    "FBT001",   # boolean positional arg in function definition
    "FBT002",   # boolean default positional arg
    "BLE001",   # blind exception catch (intentional fallback)
    "S101",     # assert detected (used for type narrowing)
    "G004",     # f-string in logging
    "TRY401",   # redundant exception in logging.exception
    "DTZ011",   # datetime.date.today without tz
    "PD002",    # inplace=True
    "TRY300",   # return in try block
    "TRY400",   # logging.error in except (intentional)
    "EM101",    # string literal in exception (Japanese messages)
    "FBT003",   # boolean positional value in function call
    "PLW2901",  # loop variable overwritten
    "TID252",   # relative imports from parent (existing pattern)
]

[tool.pylint]
disable = ["invalid-name", "broad-exception-caught"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pandas-stubs>=2.2.3.250527",
    "pre-commit>=4.5.1",
    "ruff>=0.12.0",
]
